# dbt-activity-schema

./: .gitignore  Dockerfile  README.md  dbt_project.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/actions/run_ci/: action.yml
.github/workflows/: ci.yml
integration_tests/: .example.env  .gitignore  dbt_project.yml  package-lock.yml  profiles.yml  requirements.txt
integration_tests/dbt_packages/: dbt_activity_schema
integration_tests/models/: dataset__first_before.sql  dataset__first_ever.sql  dataset__first_in_between.sql  models.yml
integration_tests/models/aggregate_in_before/: aggregate_in_before.yml  (+1 more)
integration_tests/scripts/: ci.sh  export_env.sh
integration_tests/seeds/: example__activity_stream.csv  example_activity_stream.csv
integration_tests_2/: dbt_project.yml  profiles.yml
integration_tests_2/seeds/: example__activity_stream.csv
macros/: activity.sql  dataset.sql
macros/activity/: appended_activity.sql  primary_activity.sql
macros/dataclasses/: append_activity.sql  columns.sql  occurance.sql  primary_activity.sql  relationship.sql
macros/globals/: columns.sql  globals.sql
macros/relationships/: all_ever.sql  first_after.sql  first_before.sql  first_ever.sql  first_in_between.sql  last_after.sql  last_before.sql  last_ever.sql  nth_ever.sql
macros/utils/: appended_activity_alias.sql  columns.sql  generate_appended_column_alias.sql  generate_stream_alias.sql  get_occurance_clause.sql  relationship.sql  render_additional_join_condition.sql  render_aggregation.sql
scripts/: ci.sh
(+85 files in other folders)
